# finn

./: .gitignore  Cargo.toml  README.md  install.sh  installer.iss
.github/workflows/: ci.yml  release.yml
src/: cache.rs  config.rs  integrity.rs  lock.rs  main.rs  registry.rs  utils.rs  validator.rs
src/commands/: add.rs  build.rs  clean.rs  download.rs  healthcheck.rs  init.rs  install.rs  mod.rs  remove.rs  run.rs  sync.rs  task.rs  test.rs  update.rs
tests/: build_tests.rs  cache_tests.rs  cli_tests.rs  dependency_tests.rs  integrity_tests.rs  registry_tests.rs  task_tests.rs
