[package]
name = "finn"
version = "0.4.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
colored = "2.0"
walkdir = "2.4"
which = "5.0"
tempfile = "3.8"
dirs = "5.0"
indicatif = "0.17"
reqwest = { version = "0.11", features = ["blocking", "json"] }
# NEW DEPENDENCIES
dialoguer = "0.11"  # For Interactive Menus
sha2 = "0.10"       # For hashing URLs (Caching)
hex = "0.4"         # For hex encoding hashes
fs_extra = "1.3"    # For recursive copying
